less/type.less
//
// Typography
// --------------------------------------------------

// Font Smoothing
// -------------------------

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


// Headings
// -------------------------

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
  font-weight: @headings-font-weight;
  line-height: @headings-line-height;
  color: @headings-color;

  small,
  .small {
    font-weight: 300; //normal;
    line-height: 1;
    color: @headings-small-color;
  }
}

h1, .h1,
h2, .h2 {
  margin-top: 0;
  margin-bottom: 0; // Mid-line of this font is high so no mragin bottom
  font-family: @headings-font-family;

  small,
  .small {
    font-size: 65%;
  }
}
h1, .h1 {
    line-height: (@padding-base-vertical * 6);
}
h2, .h2 {
    line-height: (@padding-base-vertical * 5);
}

h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 800;

  small,
  .small {
    font-size: 75%;
  }
}

h3, .h3 {
  line-height: (@padding-base-vertical * 4);
}
h4, .h4 {
  line-height: (@padding-base-vertical * 3);
}

h5, .h5,
h6, .h6 {
  line-height: (@padding-base-vertical * 3);
}

h1, .h1 { font-size: @font-size-h1; }
h2, .h2 { font-size: @font-size-h2; }
h3, .h3 { font-size: @font-size-h3; }
h4, .h4 { font-size: @font-size-h4; }
h5, .h5 { font-size: @font-size-h5; }
h6, .h6 { font-size: @font-size-h6; }


// Body text
// -------------------------

p {
  margin: 0 0 (@padding-base-vertical * 3);
}

.lead {
  margin-bottom: @line-height-computed;
  font-size: 22px;
  font-weight: 300;
  line-height: @line-height-large;

  @media (min-width: @screen-sm-min) {
    //font-size: (@font-size-base * 1.5);
  }
}


// Emphasis & misc
// -------------------------

// Ex: (12px small font / 14px base font) * 100% = about 85%
small,
.small {
  font-size: @font-size-small;
  line-height: @line-height-small;
}

mark,
.mark {
  background-color: @state-warning-bg;
  padding: .2em;
}

b,
strong {
  color: @text-bold-color;
}

// Alignment
.text-left           { text-align: left; }
.text-right          { text-align: right; }
.text-center         { text-align: center; }
.text-justify        { text-align: justify; }
.text-nowrap         { white-space: nowrap; }

// Transformation
.text-lowercase      { text-transform: lowercase; }
.text-uppercase      { text-transform: uppercase; }
.text-capitalize     { text-transform: capitalize; }

// Contextual colors
.text-muted {
  color: @text-muted;
}
.text-primary {
  .text-emphasis-variant(@brand-primary);
}
.text-success {
  .text-emphasis-variant(@state-success-text);
}
.text-info {
  .text-emphasis-variant(@state-info-text);
}
.text-warning {
  .text-emphasis-variant(@state-warning-text);
}
.text-danger {
  .text-emphasis-variant(@state-danger-text);
}

// Contextual backgrounds
// For now we'll leave these alongside the text classes until v4 when we can
// safely shift things around (per SemVer rules).
.bg-primary {
  // Given the contrast here, this is the only class to have its color inverted
  // automatically.
  color: #fff;
  .bg-variant(@brand-primary);
}
.bg-success {
  .bg-variant(@state-success-bg);
}
.bg-info {
  //.bg-variant(@state-info-bg);
  color: #fff;
   #gradient > .vertical(@brand-light-blue, #36c9ff);
}
.bg-warning {
  .bg-variant(@state-warning-bg);
}
.bg-danger {
  .bg-variant(@state-danger-bg);
}


// Page header
// -------------------------

.page-header {
  padding-bottom: (@padding-base-vertical * 2);
  margin: 0 0  (@padding-base-vertical * 4);
  border-bottom: 1px solid @page-header-border-color;

  &:not(:first-child) {
      margin-top: (@padding-base-vertical * 4);
  }
}


// Lists
// -------------------------

// Unordered and Ordered lists
ul,
ol {
  padding-left: 38px;
  margin-top: 0;
  margin-bottom: (@padding-base-vertical * 3);
  ul,
  ol {
    margin-bottom: 0;
  }
  //&:not(.nav) li {
  //    padding-left: 4px;
  //}
}

// List options

// Unstyled keeps list items block level, just removes default browser padding and list-style
.list-unstyled {
  padding-left: 0;
  list-style: none;
}

// Inline turns list items into inline-block
.list-inline {
  .list-unstyled();
  margin-left: -4px;

  > li {
    display: inline-block;
    padding-left: 4px;
    padding-right: 8px;
    border-right: 1px solid @brand-grey-plus-10;

    &:last-child {
        border-right: 0;
    }
  }
}

// Description Lists
dl {
  margin-top: 0; // Remove browser default
  margin-bottom: 0;
}
dt,
dd {
  line-height: @line-height-computed;
}
dt {
  font-size: @font-size-small;
  color: @brand-grey-plus-10;
}
dd {
  color: @brand-blue-plus-20;
  margin-left: 0; // Undo browser default
  margin-bottom: @line-height-computed;
}

// Horizontal description lists
//
// Defaults to being stacked without any of the below styles applied, until the
// grid breakpoint is reached (default of ~768px).

.dl-horizontal {
  dd {
    &:extend(.clearfix all); // Clear the floated `dt` if an empty `dd` is present
  }

  @media (min-width: @grid-float-breakpoint) {
    dt {
      float: left;
      width: (@dl-horizontal-offset - 20);
      clear: left;
      text-align: right;
      .text-overflow();
    }
    dd {
      margin-left: @dl-horizontal-offset;
    }
  }
}


// Misc
// -------------------------

// Abbreviations and acronyms
abbr[title],
// Add data-* attribute to help out our tooltip plugin, per https://github.com/twbs/bootstrap/issues/5257
abbr[data-original-title] {
  cursor: help;
  border-bottom: 1px dotted @abbr-border-color;
}
.initialism {
  font-size: 90%;
  .text-uppercase();
}

// Blockquotes
blockquote {
  padding: 0 20px;
  margin: 24px 0;
  font-size: @blockquote-font-size;
  border-left: 4px solid @blockquote-border-color;

  p {
      margin-bottom: 8px;
  }

  p,
  ul,
  ol {
    &:last-child {
      margin-bottom: 0;
    }
  }

  // Note: Deprecated small and .small as of v3.1.0
  // Context: https://github.com/twbs/bootstrap/issues/11660
  footer,
  small,
  .small {
    display: block;
    font-size: 80%; // back to default font-size
    line-height: @line-height-base;
    color: @blockquote-small-color;

    &:before {
      content: '\2014 \00A0'; // em dash, nbsp
    }
  }
}
@media (min-width: @screen-sm-min) {
    blockquote {
        margin: 32px;
    }
}
@media (min-width: @screen-md-min) {
    blockquote {
        margin: 40px;
    }
}

// Opposite alignment of blockquote
//
// Heads up: `blockquote.pull-right` has been deprecated as of v3.1.0.
.blockquote-reverse,
blockquote.pull-right {
  padding-right: 20px;
  padding-left: 0;
  border-right: 4px solid @blockquote-border-color;
  border-left: 0;
  text-align: right;

  // Account for citation
  footer,
  small,
  .small {
    &:before { content: ''; }
    &:after {
      content: '\00A0 \2014'; // nbsp, em dash
    }
  }
}

// Addresses
address {
  margin-bottom: @line-height-computed;
  font-style: normal;
  line-height: @line-height-base;
}


h1, h2, h6 {
    text-transform: uppercase;
}

h3, h4, h5 {
    color: @brand-blue;
    margin-bottom: @padding-base-vertical;
}
h6 {
    color: @brand-grey-plus-20;
}

